[package]
name = "rs_gst_custom_audio"
version = "1.0.0"
edition = "2021"
authors = ["Michael Honaker"]
repository = "https://gitlab.freedesktop.org/gstreamer/"
license = "MIT/X11"
description = "Custom GStreamer Audio Plugin"


[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["blocking", "multipart"] }
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.30"
async-std = "1.12.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hex = "0.4.3"

[lib]
name = "rsgstcustomaudio"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
